# hoshiyomi

./: .gitignore  DEPLOY.md  app.py  cf-requirements.txt  email_automation.js  fortune_app.jsx  fortune_engine.md  fortune_flow.mermaid  launch_plan.docx  note_article.md  note_article_final.md  paid_prompt_templates.md  phase3_monetization.md  render.yaml  wrangler.toml
scripts/: extract_template.py
static/: app.js
worker/: cf-requirements.txt  deploy.ps1  pyproject.toml  wrangler.toml
worker/src/: entry.py  main.py  template_str.py
