[project]
name = "hoshiyomi-worker"
version = "0.1.0"
description = "星詠みの館 - Cloudflare Worker"
requires-python = ">=3.12"
dependencies = [
  "httpx",
]

[dependency-groups]
dev = [
  "workers-py",
  "workers-runtime-sdk",
]

[tool.wrangler]
name = "hoshiyomi-no-yakata"
main = "src/main.py"
compatibility_flags = ["python_workers"]
